--- a/src/components/misc/Markdown.astro
+++ b/src/components/misc/Markdown.astro
@@ -475,6 +475,7 @@ const className = Astro.props.class
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
     transition-duration: 0.15s
 
+  span.line:last-child:empty { display: none; }
 </style>
 
 <style lang="css" is:global>
