--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -114,6 +114,9 @@ const siteLang = lang.replace('_', '-')
 
 		<link rel="alternate" type="application/rss+xml" title={profileConfig.name} href={`${Astro.site}rss.xml`}/>
 
+		<!-- Mastodon Verification -->
+		<link rel="me" href="https://androiddev.social/@gradlew" />
+
 		<style define:vars={{ configHue }}></style>  <!-- defines global css variables. This will be applied to <html> <body> and some other elements idk why -->
 
 	</head>
