feat: add cloudflare web analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -143,6 +143,10 @@ const bannerOffset = bannerOffsetByPosition[siteConfig.banner.position || 'cente
 		<!-- increase the page height during page transition to prevent the scrolling animation from jumping -->
 		<div id="page-height-extend" class="hidden h-[300vh]"></div>
 	</body>
+
+	<!-- Cloudflare Web Analytics -->
+	<script defer src='https://cwa.ngoding.id/ngoding.js' data-cf-beacon='{"send":{"to": "https://cwa.ngoding.id/ngoding"},"token": "1651e8a3a92c4c76a97e095c59a8f8fc"}'></script>
+	<!-- End Cloudflare Web Analytics -->
 </html>
 <style is:global>
 	:root {
